# plotly-resampler-benchmarks

./: README.md  pyproject.toml
code/: benchmark_visualizations.ipynb  fr_selenium.py  run_scripts.ipynb  test_bokeh.py  test_holoviews_lttb.py  test_holoviews_rasterize.py  test_matplotlib.py  test_plotly.py  test_plotly_resampler.py  utils.py
reports/: README.md
