[tool.poetry]
name = "plotly-resampler-banchmarking"
version = "0.1.1" # Do not forget to update the __init__.py __version__ variable
description = "benchmarking code for plotly resampler"
authors = ["Jonas Van Der Donckt, Jeroen Van Der Donckt"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/plotly-resampler-benchmarking"
documentation = "https://predict-idlab.github.io/plotly-resampler-benchmarking"
keywords = ["time-series", "visualization", "python", "plotly", "benchmarking"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
selenium = "^4.1.3"
plotly-resampler = "^0.3.0"
holoviews = "^1.14.8"
seaborn = "^0.11.2"
viztracer = "0.13.4"
vizplugins = "^0.1.2"
xarray = "^2022.3.0"
datashader = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
memory-profiler = "^0.58.0"
ipykernel = "^6.9.2"
ipywidgets = "^7.7.0"
jupyterlab = "^3.3.2"
isort = "^5.10.1"
jupyterlab-code-formatter = "^1.4.10"
pyfunctional = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"